fix first column in overview not showing marker + change marker to calculator number

--- a/src/heatmap.css
+++ b/src/heatmap.css
@@ -55,3 +55,8 @@ input {
     border-bottom: 0;
     background-color: white;
 }
+
+@font-face {
+    font-family: "calculator";
+    src: url("./font/digital-7.ttf");
+}
